Change square highlighting to avoid overflow into other squares

--- a/chess_engine/static/styles.css
+++ b/chess_engine/static/styles.css
@@ -54,9 +54,9 @@ td.black{
 }
 
 td.selected{
-    outline: 3px solid black;
+    box-shadow: inset 0 0 0 3px black;
 }
 
 td.valid-move{
-    outline: 3px solid green;
+    box-shadow: inset 0 0 0 3px green;
 }
